# deepR

./: .gitignore  .gitmodules  README.md  architecture.md  checkpoints.md  environment.yml  jobprompt.md  pyproject.toml  requirements.md  tasks.md
.github/workflows/: ci.yml
scripts/: test_llm_providers.py  test_lmstudio_provider.py  test_ollama_provider.py
src/deepr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/deepr/agents/: provider_selector.py
src/deepr/cli/: main.py
src/deepr/config/: settings.py
src/deepr/graph/: state.py
src/deepr/integrations/: deepagents_smoke.py
src/deepr/logging/: logger.py
src/deepr/models/: llm_provider.py
src/deepr/prompts/: __init__.py  open_deep_research_prompts.py
src/deepr/tools/: base.py
tests/: test_cli_basic.py  test_config_load.py  test_deepagents_smoke.py  test_lmstudio_provider_edgecases_respx.py  test_lmstudio_provider_respx.py  test_ollama_provider_edgecases_respx.py  test_ollama_provider_respx.py  test_prompts_load.py  test_provider_selector.py  test_state.py  test_tool_registry.py
